@@ -22,6 +22,9 @@ LINKER_SOURCES = $(LINKER_PLUGINS:.dll=.cs)
 
 DISTFILES = README $(LINKER_SOURCES) $(LINKER_DESCS)
 
+WORKING_DIR = $(mono_libdir)/mono/2.1
+OUTPUT_DIR = output
+
 ifneq (net_2_1, $(PROFILE))
 all-local: $(LINKER_PLUGINS)
 
@@ -35,10 +38,12 @@ clean-local:
 else
 all-local:
 
-install-local: tune
+install-local: tune end-install
 
 clean-local:
+	rm -rf $(OUTPUT_DIR)
 	rm -rf masterinfos*
+
 endif
 
 uninstall-local:
@@ -48,8 +53,6 @@ dist-local: dist-default
 test-local:
 
 run-test-local run-test-ondotnet-local:
-
-WORKING_DIR = $(mono_libdir)/mono/2.1
 
 MCS_MASTER_INFOS =	\
 	masterinfos/silverlight/mscorlib.info	\
@@ -61,7 +64,7 @@ $(MCS_MASTER_INFOS):
 	wget -O masterinfos.zip $(MASTER_INFOS_ZIP)
 	unzip masterinfos.zip
 
-LINKER_FLAGS = -d $(WORKING_DIR) -o $(WORKING_DIR) -l none -c link -a smcs
+LINKER_FLAGS = -d $(WORKING_DIR) -o $(OUTPUT_DIR) -l none -c link -a smcs
 LINKER_STEPS = \
 	Mono.Tuner.PrintStatus,PrintStatus:OutputStep	\
 	Mono.Tuner.RemoveSerialization,RemoveSerialization:OutputStep	\
@@ -69,6 +72,15 @@ LINKER_STEPS = \
 
 tune: $(MCS_MASTER_INFOS)
 	MONO_PATH="Mono.Tuner$(PLATFORM_PATH_SEPARATOR)$(topdir)/class/lib/net_2_0$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(RUNTIME) $(RUNTIME_FLAGS) $(LINKER) $(LINKER_FLAGS) $(LINKER_DESCS:%=-x %) $(LINKER_STEPS:%=-s %) $(MCS_MASTER_INFOS:%=-i %)
+
+gacutil = $(topdir)/class/lib/net_1_1_bootstrap/gacutil.exe
+GACUTIL = MONO_PATH="$(topdir)/class/lib/net_1_1_bootstrap$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(RUNTIME) $(RUNTIME_FLAGS) $(gacutil)
+
+end-install:
+	cp $(OUTPUT_DIR)/mscorlib.dll $(mono_libdir)/mono/2.1/mscorlib.dll
+	$(GACUTIL) /i $(OUTPUT_DIR)/System.dll /f /root $(mono_libdir) /package 2.1
+	$(GACUTIL) /i $(OUTPUT_DIR)/System.Core.dll /f /root $(mono_libdir) /package 2.1
+	$(GACUTIL) /i $(OUTPUT_DIR)/System.Xml.Core.dll /f /root $(mono_libdir) /package 2.1
 
 %.dll: %.cs
 	$(CSCOMPILE) /t:library $^
